--- a/wallet/src/ui/styles/global.scss
+++ b/wallet/src/ui/styles/global.scss
@@ -26,6 +26,7 @@ body {
     display: inline-block;
     font-weight: 700;
     cursor: pointer;
+    color: black;
 
     &:visited,
     &:active {
